updating pom files
plugin versions and general configurations are in the super pom
child poms reference necessary plugins
tests are not set up property so atm skipping in the following moduls:
* sch-pek-web
* sch-pek-ejb-impl