@@ -8,7 +8,7 @@
     <name>SCH PéK Application</name>
     <url>http://stewie.sch.bme.hu/projects/korok</url>
     <inceptionYear>2008</inceptionYear>
-
+    
     <licenses>
         <license>
             <name>BSD License (original)</name>
@@ -45,6 +45,7 @@
             <timezone>+1</timezone>
         </developer>
     </developers>
+
     <contributors>
         <contributor>
             <name>Balazs Varga</name>
@@ -60,6 +61,7 @@
         <name>Kir-Dev</name>
         <url>https://kir-dev.sch.bme.hu</url>
     </organization>
+
     <mailingLists>
         <mailingList>
             <name>jee-dev</name>
@@ -71,14 +73,9 @@
     </mailingLists>
 
     <issueManagement>
-        <system>Redmine</system>
-        <url>https://kir-dev.sch.bme.hu/redmine</url>
+        <system>Github</system>
+        <url>https://github.com/kir-dev/korok/issues</url>
     </issueManagement>
-
-    <ciManagement>
-        <system>Jenkins</system>
-        <url>TBD</url>
-    </ciManagement>
 
     <distributionManagement>
         <site>
@@ -89,8 +86,8 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:http://stewie.sch.bme.hu/pub/aldaris/korok</connection>
-        <url>http://stewie.sch.bme.hu/gitweb</url>
+        <connection>scm:https://github.com/kir-dev/korok.git</connection>
+        <url>https://github.com/kir-dev/korok</url>
     </scm>
 
     <properties>
@@ -107,145 +104,6 @@
         <module>sch-pek-ear</module>
         <module>sch-pek-test</module>
     </modules>
-
-    <profiles>
-        <profile>
-            <id>hudson</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <artifactId>maven-site-plugin</artifactId>
-                            <version>2.1.1</version>
-                        </plugin>
-                        <plugin>
-                            <artifactId>maven-checkstyle-plugin</artifactId>
-                            <version>2.2</version>
-                        </plugin>
-                        <plugin>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <version>2.7</version>
-                        </plugin>
-                        <plugin>
-                            <artifactId>maven-source-plugin</artifactId>
-                            <version>2.1.2</version>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>findbugs-maven-plugin</artifactId>
-                            <version>2.3.1</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-site-plugin</artifactId>
-                        <!-- Kell, hogy tényleg menjen az UTF-8 -->
-                        <configuration>
-                            <outputEncoding>UTF-8</outputEncoding>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-checkstyle-plugin</artifactId>
-                        <configuration>
-                            <configLocation>resources/checkstyle.xml</configLocation>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.plexus</groupId>
-                                <artifactId>plexus-velocity</artifactId>
-                                <version>1.1.3</version>
-                                <exclusions>
-                                    <exclusion>
-                                        <!--
-                                        Use the version specified by checkstyle:checkstyle instead
-                                        -->
-                                        <artifactId>commons-collections</artifactId>
-                                        <groupId>commons-collections</groupId>
-                                    </exclusion>
-                                    <exclusion>
-                                        <artifactId>plexus-utils</artifactId>
-                                        <groupId>plexus</groupId>
-                                    </exclusion>
-                                </exclusions>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-javadoc-plugin</artifactId>
-                        <configuration>
-                            <minmemory>128m</minmemory>
-                            <maxmemory>256m</maxmemory>
-                            <quiet>true</quiet>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <inherited>true</inherited>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>findbugs-maven-plugin</artifactId>
-                        <configuration>
-                            <findbugsXmlOutput>true</findbugsXmlOutput>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <inherited>true</inherited>
-                        <configuration>
-                            <skipTests>false</skipTests>
-                            <forkMode>once</forkMode>
-                            <argLine>-Xmx512m -XX:MaxPermSize=256m -Dkorok.test.config=../resources/test/config.properties</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-
-            <reporting>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-pmd-plugin</artifactId>
-                        <version>2.5</version>
-                        <configuration>
-                            <targetJdk>1.6</targetJdk>
-                            <linkXRef>true</linkXRef>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-jxr-plugin</artifactId>
-                        <version>2.2</version>
-                    </plugin>
-                </plugins>
-            </reporting>
-
-            <dependencies>
-                <dependency>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-entitymanager</artifactId>
-                    <!--<version>3.5.0-Final</version>-->
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
 
     <dependencyManagement>
         <dependencies>
@@ -303,7 +161,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.7</version>
+                <version>4.11</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -346,66 +204,61 @@
         </dependencies>
     </dependencyManagement>
 
-
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                        <source>1.7</source>
+                        <target>1.7</target>
+                        <showDeprecation>true</showDeprecation>
+                    </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>2.6</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.15</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.apache.maven.surefire</groupId>
+                            <artifactId>surefire-junit47</artifactId>
+                            <version>2.15</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
-                    <groupId>com.mycila.maven-license-plugin</groupId>
-                    <artifactId>maven-license-plugin</artifactId>
-                    <version>1.9.0</version>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-ear-plugin</artifactId>
+                    <version>2.8</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-ejb-plugin</artifactId>
                     <version>2.3</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>2.3</version>
+                    <version>2.4</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
             </plugins>
         </pluginManagement>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <showDeprecation>true</showDeprecation>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skipTests>true</skipTests>
-                </configuration>
-            </plugin>
-        </plugins>
     </build>
-
 </project>
